project rearrange for ease of merging with esri